git push git add . git commit -m "Your commit message" git push

--- a/Weather Forecast Project/index.html
+++ b/Weather Forecast Project/index.html
@@ -16,8 +16,8 @@
     <!-- First section start from here where user can input the city detail -->
     <section class="city-input-detail">
         <div class="cityname">
-            <h1 class="city-head">Kota</h1>
-            <p class="date">16-07-2024</p>
+            <h1 class="city-head">Kanpur</h1>
+            <p class="date">07-12-2024</p>
         </div>
         <div class="inputfield">
             <input type="text" placeholder="Enter City" id="city-name">
@@ -34,19 +34,19 @@
     <section class="second-sec">
         <div class="left-sec">
             <div class="tempt">
-                <h1 class="temperature-rating">15</h1>
+                <h1 class="temperature-rating">25</h1>
             </div>
             <div class="tempt-rating">
                 <h4>°C | °F</h4>
-                <p id="temperature-message">Partly Cloudy</p>
+                <p id="temperature-message">Mostly Cloudy</p>
             </div>
         </div>
         <div class="right-sec">
-            <div class="img"><img src="Images/cloudy.png" alt="" id="image-source"></div>
+            <div class="img"><img src="Images/cloudy1.png" alt="" id="image-source"></div>
             <div class="extra-msg">
                 <p><span><i class="fa-solid fa-temperature-three-quarters"></i></span><span> Feels like <span id="feels-like">31</span>°C</span></p>
-                <p><span><i class="wi wi-humidity humidity-icon"></i></span><span> Humidity <span class="humidity">31</span>%</span></p>
-                <p><span><i class="fa-solid fa-wind"></i></span><span> Wind Speed <span class="wind-speed">31</span> m/s</span></p>
+                <p><span><i class="wi wi-humidity humidity-icon"></i></span><span> Humidity <span class="humidity">39</span>%</span></p>
+                <p><span><i class="fa-solid fa-wind"></i></span><span> Wind Speed <span class="wind-speed">3</span>m/s</span></p>
             </div>
         </div>
     </section>
@@ -55,48 +55,48 @@
 <!-- Third section start from here -->
     <section class="third-section">
         <div class="forecast">
-            <p class="date-forecast">16-07-2024</p>
+            <p class="date-forecast">08-12-2024</p>
             <div class="image-tag"><img src="Images/cloud.png" alt="" id="image-forecast"></div> 
             <div class="basic-info">
-                <p><span>Temperature</span>: <span class="temp-forecast">23</span>°C</p>
-                <p><span>Wind</span>: <span class="wind-forecast">23</span> m/s</p>
-                <p><span>Humidity</span>: <span class="humid-forecast">23</span>%</p>
+                <p><span>Temperature</span>: <span class="temp-forecast">25</span>°C</p>
+                <p><span>Wind</span>: <span class="wind-forecast">10</span> m/s</p>
+                <p><span>Humidity</span>: <span class="humid-forecast">50</span>%</p>
             </div>
         </div>
         <div class="forecast">
-            <p class="date-forecast">16-07-2024</p>
+            <p class="date-forecast">09-12-2024</p>
             <div class="image-tag"><img src="Images/cloud.png" alt="" id="image-forecast"></div> 
             <div class="basic-info">
-                <p><span>Temperature</span>: <span class="temp-forecast">23</span>°C</p>
-                <p><span>Wind</span>: <span class="wind-forecast">23</span> m/s</p>
-                <p><span>Humidity</span>: <span class="humid-forecast">23</span>%</p>
+                <p><span>Temperature</span>: <span class="temp-forecast">24</span>°C</p>
+                <p><span>Wind</span>: <span class="wind-forecast">8</span> m/s</p>
+                <p><span>Humidity</span>: <span class="humid-forecast">60</span>%</p>
             </div>
         </div>
         <div class="forecast">
-            <p class="date-forecast">16-07-2024</p>
+            <p class="date-forecast">10-12-2024</p>
             <div class="image-tag"><img src="Images/cloud.png" alt="" id="image-forecast"></div> 
             <div class="basic-info">
                 <p><span>Temperature</span>: <span class="temp-forecast">23</span>°C</p>
-                <p><span>Wind</span>: <span class="wind-forecast">23</span> m/s</p>
-                <p><span>Humidity</span>: <span class="humid-forecast">23</span>%</p>
+                <p><span>Wind</span>: <span class="wind-forecast">11</span> m/s</p>
+                <p><span>Humidity</span>: <span class="humid-forecast">60</span>%</p>
             </div>
         </div>
         <div class="forecast">
-            <p class="date-forecast">16-07-2024</p>
+            <p class="date-forecast">11-12-2024</p>
             <div class="image-tag"><img src="Images/cloud.png" alt="" id="image-forecast"></div> 
             <div class="basic-info">
                 <p><span>Temperature</span>: <span class="temp-forecast">23</span>°C</p>
-                <p><span>Wind</span>: <span class="wind-forecast">23</span> m/s</p>
-                <p><span>Humidity</span>: <span class="humid-forecast">23</span>%</p>
+                <p><span>Wind</span>: <span class="wind-forecast">12</span> m/s</p>
+                <p><span>Humidity</span>: <span class="humid-forecast">51</span>%</p>
             </div>
         </div>
         <div class="forecast">
-            <p class="date-forecast">16-07-2024</p>
+            <p class="date-forecast">12-12-2024</p>
             <div class="image-tag"><img src="Images/cloud.png" alt="" id="image-forecast"></div> 
             <div class="basic-info">
                 <p><span>Temperature</span>: <span class="temp-forecast">23</span>°C</p>
-                <p><span>Wind</span>: <span class="wind-forecast">23</span> m/s</p>
-                <p><span>Humidity</span>: <span class="humid-forecast">23</span>%</p>
+                <p><span>Wind</span>: <span class="wind-forecast">10</span> m/s</p>
+                <p><span>Humidity</span>: <span class="humid-forecast">48</span>%</p>
             </div>
         </div>
 
